# tei-xml-ui-experiment

./: .env.example  .env.local.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .prettierrc  AUTOMATED-MIGRATION.ts  CONTRIBUTING.md  DEPLOYMENT.md  FEATURES.md  FINAL-COMPLETE.md  IMPLEMENTATION_COMPLETE.md  LICENSE  README.md  REVERSE_PROXY_DEPLOYMENT.md  TASKS_19_20_SUMMARY.md  TASK_17_COMPLETION_SUMMARY.md  TEST_VERIFICATION_REPORT.md  autonomous-agents-final-report.md  check-dom.js  check-panel.js  corpora  e2e-results-output.txt  eslint.config.mjs  final-verification-report.md  final-verified-complete-report.md  fix-strict-mode.sh  flake.nix  gource-visualization.webm  huge-test.tei.xml  invalid-close.xml  jest.config.js  jest.setup.js  large-test.tei.xml  large1.tei.xml  llms-small.txt  malformed-root.tei.xml  massive-test.tei.xml  next.config.ts  (+14 more)
annotation-ml/: .gitignore  README.md  pyproject.toml
annotation-ml/config/: crf_fast.yaml  crf_novel_dialogism.yaml  crf_test.yaml  distilbert_baseline.yaml  distilbert_novel_dialogism.yaml  distilbert_test.yaml  modernbert_large.yaml  modernbert_test.yaml
annotation-ml/docs/: all-corpora-analysis.md  baseline-error-analysis.md  crf-threshold-tuning.md  evaluation_module_guide.md  evaluation_module_summary.md  final-model-comparison-2026-02-06.md  model-comparison-test-results.md  novel-dialogism-solution-summary.md  parser-bug-analysis-summary.md  performance-comparison-2026-02-05.md  performance-comparison-in-progress.md  victorian-corpus-analysis.md  victorian-investigation-summary.md
annotation-ml/docs/plans/: 2025-02-05-package-reorganization-design.md
annotation-ml/results/fast_comparison/: metrics.json
annotation-ml/scripts/: compare_fast_presets.py  debug_baseline.py  monitor_training.sh  test_all_models.sh  train_distilbert.py  train_novel_dialogism.py  verify_baseline.py  verify_tei_parser.py
annotation-ml/src/speech_detection/: __init__.py  cli.py
annotation-ml/src/speech_detection/data/: __init__.py  parsers.py  protocols.py  quote_based_extractor.py  quote_speech_extractor.py  splits.py
annotation-ml/src/speech_detection/evaluation/: __init__.py  metrics.py  protocols.py  split.py  statistical.py
app/: page.tsx  (+3 more)
(+768 files in other folders)
